fix(TabbedBase): jump between tabs
this is caused from the transition animation + its size not being computed yet (?)

fix: #100

--- a/data/style.css
+++ b/data/style.css
@@ -56,7 +56,6 @@ flowboxchild {
 .ttl-view .small .content {
 	border: none;
 	border-radius: 0;
-	transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
 .ttl-view .small .content row {
@@ -70,8 +69,13 @@ flowboxchild {
 	border-top: 0px;
 }
 
-.ttl-view clamp>* {
+.ttl-view:not(.no-transition) .small .content,
+.ttl-view:not(.no-transition) clamp>* {
 	transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
+.no-transition {
+	transition: none;
 }
 
 .ttl-view .large {
